--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
     <form action="contact.html" method="post">
 	  
-        <label for="Nombre">Product</label><br>
+        <label for="Nombre">Producto</label><br>
         <input type="text"><br>
           
           
